--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
 								who got a job. The csv data file comprises of the skills and academic scores of the students who managed to get a job. 
 							</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Get Code</a></li>
+								<li><a href="https://github.com/ayushthakur24/Admittance-Post_Prophecy" class="button">Get Code</a></li>
 							</ul>
 						</div>
 					</div>
@@ -113,14 +113,13 @@
 					<div class="content">
 						<div class="inner">
 							<header class="major">
-								<h3>Sed nunc ligula</h3>
+								<h3>Portfolio Website</h3>
 							</header>
-							<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-								condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-								pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-								sagittis tempus.</p>
+							<p>Using HTML, CSS and Javascript, I have made this project hosting on local host.
+								You can change the code according to your needs and skills and even can add your photo.
+							</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="https://github.com/ayushthakur24/Portfolio_Template" class="button">Get Code</a></li>
 							</ul>
 						</div>
 					</div>
@@ -131,13 +130,16 @@
 			<section id="three">
 				<div class="inner">
 					<header class="major">
-						<h2>Massa libero</h2>
+						<h2>Upcoming Projects</h2>
 					</header>
-					<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
-						magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna.
-						Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem
-						consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
-						amet pharetra et feugiat tempus.</p>
+					<p>I will be uploading more projects on GitHub so stay tuned. You can find the code as well by clicking
+						the button below.The projects will be on languages such as Django , R , SQL and Java.I am actively looking for 
+						more open source interesting projects and internship opportunities as well. Please feel free to connect with
+						me on linkedin.
+					</p>
+					<ul class="actions">
+						<li><a href="https://github.com/ayushthakur24?tab=repositories" class="button">Get Code</a></li>
+					</ul>
 				</div>
 			</section>
 
