--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				</header>
 				<div class="content">
 					<p>
-						I am currently a graduate student at Santa Clara University,
-						California pursuing my Master's in Computer Science.
+						I am currently a student at Santa Clara University,
+						pursuing my Master's in Computer Science.
 					</p>
 				</div>
 			</div>
@@ -121,7 +121,7 @@
 					</p>
 					<ul class="actions">
 						<li>
-							<a href="about.html" class="button next">My Work</a>
+							<a href="projects.html" class="button next">My Work</a>
 						</li>
 					</ul>
 				</div>
