--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
@@ -68,7 +64,7 @@
 			<!-- Two -->
 			<section id="two" class="spotlights">
 				<section>
-					<a href="generic.html" class="image">
+					<a href="https://github.com/ayushthakur24?tab=repositories" class="image">
 						<img src="images/pic08.png" alt="" data-position="center center" />
 					</a>
 					<div class="content">
@@ -87,8 +83,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="generic.html" class="image">
-						<img src="images/pic09.jpg" alt="" data-position="top center" />
+					<a href="https://github.com/ayushthakur24?tab=repositories" class="image">
+						<img src="images/pic09.png" alt="" data-position="top center"/>
 					</a>
 					<div class="content">
 						<div class="inner">
@@ -107,8 +103,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="generic.html" class="image">
-						<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+					<a href="https://github.com/ayushthakur24?tab=repositories" class="image">
+						<img src="images/pic10.png" alt="" data-position="25% 25%" />
 					</a>
 					<div class="content">
 						<div class="inner">
@@ -138,7 +134,7 @@
 						me on linkedin.
 					</p>
 					<ul class="actions">
-						<li><a href="https://github.com/ayushthakur24?tab=repositories" class="button">Get Code</a></li>
+						<li><a href="https://github.com/ayushthakur24?tab=repositories" class="button">Check GitHub</a></li>
 					</ul>
 				</div>
 			</section>
